--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "coveralls": "^2.11.6",
     "eslint-plugin-mocha": "^1.1.0",
+    "gulp": "^3.9.0",
     "gulp-eslint": "^1.1.1",
     "gulp-istanbul": "^0.10.3",
     "gulp-load-plugins": "^1.2.0",
