after script: add coveralls

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "NetSuite-side require() the node.js",
   "main": "src/index.js",
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "repository": {
     "type": "git",
