--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gulp-load-plugins": "^1.2.0",
     "gulp-mocha": "^2.2.0",
     "gulp-plumber": "^1.0.1",
+    "gulp-uglify": "^1.5.1",
     "require-dir": "^0.3.0",
     "should": "^8.1.1"
   }
